<resources>
    <string name="app_name">Such Note</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- ATTENTION :
    l'ordre des onglets doit respecter les indices présents
    dans la classe FileManager (cohérence générale des indices de l'application) -->
    <string-array name="activity_tabs">
        <item>Texte</item>
        <item>Audio</item>
        <item>Photo</item>
        <item>Vidéo</item>
    </string-array>

    <string name="button_1">Texte</string>
    <string name="button_2">Photo</string>
    <string name="button_3">Audio</string>
    <string name="button_4">Video</string>

    <string name="banner_alt">Note Photo</string>

    <string name="smart_button">Prendre une note</string>
    <string name="activity_title">Such.note</string>
    <string name="recommanded_mode">Mode recommandé</string>
    <string name="others_mode">Autres modes</string>

</resources>
