<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_3"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_4"/>

    <Button
        android:id="@+id/smartbutton"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_button"/>

    <TextView
        android:id="@+id/sensor_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/sensor_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/sensor_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <ListView
        android:id="@+id/note_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.uqacproject.com.suchnote.FloatingActionButton
        android:id="@+id/fab_1"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_below="@id/sensor_speed"
        android:layout_marginTop="-28dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/drop_shadow"
        android:stateListAnimator="@animator/fab_anim"
        android:foreground="?android:windowContentOverlay">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/fab_icons"
            android:layout_gravity="center"
            android:duplicateParentState="true" />

    </android.uqacproject.com.suchnote.FloatingActionButton>

</LinearLayout>
